--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
+/* google fonts */
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,600;9..40,700&display=swap");
+/* google fonts */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body{
+  font-family: 'DM Sans', sans-serif;
+}
 
 .banner {
   background: url("https://i.ibb.co/Nn6wdtH/cover-image.jpg");
@@ -15,13 +24,17 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Adjust the last value (0.5) for the desired opacity */
+  background-color: rgba(
+    0,
+    0,
+    0,
+    0.5
+  ); /* Adjust the last value (0.5) for the desired opacity */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: white; 
+  color: white;
   text-align: center;
-  font-size: 24px; 
+  font-size: 24px;
 }
-
