--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,8 +1,6 @@
-nav a.active{
-    background: #B45309;
-    color: white;
-    padding: .5rem 1rem;
-    border-radius: 30px;
+nav a.active {
+  background: #fbbd23;
+  color: black;
+  padding: 0.5rem 1rem;
+  border-radius: 30px;
 }
-
-
