banner image updated

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.main-bg{
+.main-bg {
   background-image: url("../src/assets/cover.jpg");
   background-position: center;
   background-size: cover;
@@ -17,7 +17,7 @@ body {
 }
 
 .banner {
-  background: url("https://i.ibb.co/Nn6wdtH/cover-image.jpg");
+  background: url("https://images.unsplash.com/photo-1414235077428-338989a2e8c0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-position: center;
   background-size: cover;
   position: relative;
